--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,13 @@
-#root header {
-    text-align: center;
-    color: #077187;
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-#root p {
-    color: #B0B5B3;
-    font-size: 20px;
-}
-
-#root a {
-    color: inherit;
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
 }
